# NYU2023SummerML1

./: pyproject.toml
Day1/: demo_python_basics.ipynb  demo_vectors_matrices.ipynb
Day2/: Boston_Housing_One_Variable.ipynb  IceBreaker_movie_demo.ipynb  demo_multilinear.ipynb  demo_plot.ipynb  vectorize_programming.ipynb
Day3/: demo_fit_polynomial.ipynb  demo_overfitting_regularization.ipynb
Day4/: demo_breast_cancer.ipynb  demo_iris.ipynb
Day5/: fish_market.ipynb
Day6/: demo_tf_keras_basics.ipynb  lab_mlp_fish_market_keras.ipynb
Day7/: Images_In_Computer_Demo.ipynb  Kernels_Demo.ipynb  demo_MNIST.ipynb  lab_transfer_learning_dog_cat.ipynb
Day9/: car_keras.ipynb  car_keras_v2.ipynb
Day9/data/: .gitignore
