[tool.poetry]
name = "nyu2023summerml1"
version = "0.1.0"
description = ""
authors = ["n0Oo0Oo0b <bobthebuilder10492@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
jupyter = "^1.0.0"
numpy = "^1.25.0"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
tensorflow = "^2.12.0"
keras = "^2.13.1"
scikit-image = "^0.21.0"
scipy = "^1.11.1"
tensorflow-datasets = "^4.9.2"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
